pkg/plugins/policies/meshtimeout/plugin/testdata/original_inbound_listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 80
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      commonHttpProtocolOptions:
        idleTimeout: 0s
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      requestHeadersTimeout: 0s
      routeConfig:
        name: self_inbound_dp_80
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: self_inbound_dp_80
          routes:
          - match:
              prefix: /
            route:
              cluster: self_inbound_dp_80
              idleTimeout: 1800s
              timeout: 15s
      statPrefix: self_inbound_dp_80
name: self_inbound_dp_80
trafficDirection: INBOUND
